# winzy-time-in-words

./: README.md  pyproject.toml
tests/: test_winzy_time_in_words.py
winzy_time_in_words/: __init__.py  time_in_words.py
