[project]
name = "winzy-time-in-words"
version = "0.0.1"
description = "Simple program to say time in words"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-time-in-words"
Changelog = "https://github.com/sukhbinder/winzy-time-in-words/releases"
Issues = "https://github.com/sukhbinder/winzy-time-in-words/issues"
CI = "https://github.com/sukhbinder/winzy-time-in-words/actions"

[project.entry-points."winzy.plugins"]
time = "winzy_time_in_words:time_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
